# freeswitch

./: Makefile.am  configure.ac  freeswitch.spec
libs/esl/python/: Makefile.am  events.py  python-config  server.py  single_command.py
src/: switch_core_media.c  switch_ivr.c
src/mod/endpoints/mod_sofia/: sofia_glue.c
src/mod/event_handlers/mod_newrelic/: Makefile.am  mod_newrelic.2017.vcxproj  mod_newrelic.c
src/mod/event_handlers/mod_newrelic/conf/autoload_configs/: newrelic.conf.xml
src/mod/languages/mod_python/: mod_python.c
